--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -20,7 +20,8 @@
         color: $white;
 
         @include breakpoints.medium {
-            padding-left: 35px;
+            padding-left: 4rem;
+            padding-right: 2rem;
             font-size: 1.8rem;
             margin: 0;
         }
@@ -41,6 +42,7 @@
     &__navigation {
         text-align: left;
 
+
         @include breakpoints.medium {
             padding-top: 25px;
         }
@@ -50,14 +52,12 @@
     &__menu-item {
         margin: 0;
         font-size: .875rem;
-        line-height: 1.375rem;
         text-align: center;
         text-decoration: none;
         list-style-type: none;
         display: inline;
-        padding-bottom: 10px;
         width: 50%;
-        color: $white;
+        color: $mercury;
 
         @include breakpoints.medium {
             font-size: 1rem;
@@ -70,18 +70,14 @@
             line-height: 2rem;
         }
     }
-
-
-    &__menu-item--link {
-        text-decoration: none;
-        width: 100%;
-        color: $mercury;
-        
-    }
 }
 
 
-
+li {
+    list-style: none;
+    width: 50%;
+   text-align: center;
+}
 
 @include breakpoints.medium {
     .header {
@@ -89,29 +85,36 @@
         width: 100vw;
         align-items: center;
     }
-}
-
-
 
 .active {
-    border-bottom: 0.2rem solid $white;
-    padding-bottom: 25px;
-    font-weight: 400;
-    color: $white;
 
-    @include breakpoints.medium {
-        font-weight: 400;
-        font-size: 1rem;
-        line-height: 2rem;
-        padding-bottom: 21px;
-        color: $white;
-    }
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 2rem;
+    padding-bottom: 25px;
+    color: $white;
+    width: fit-content;
+
 }
 
+}
+
+
+
+// .header__menu-item, 
+
+.active-mobile {
+    border-bottom: 0.2rem solid $white;
+        font-weight: 400;
+        color: $white;
+        @include breakpoints.medium {
+
+        }
+}
 
 .header__menu-item:hover {
     font-weight: 600;
-            padding-bottom: 21px;
+            padding-bottom: 25px;
     color: $white;
 
     @include breakpoints.medium {
