--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -37,14 +37,27 @@
         justify-content: space-evenly;
         font-size: 1rem;
         line-height: 2rem;
+        @include breakpoints.medium{
+            font-size: .875rem;
+                margin: 0;
+                line-height: 1.375rem;
+                color: $white;
+                display: flex;
+                padding-left: 0;
+                justify-content: space-evenly;
+                font-size: 1rem;
+                line-height: 2rem;
+        }
     }
 
     &__navigation {
         text-align: left;
+       
 
 
         @include breakpoints.medium {
             padding-top: 25px;
+width: 15rem;
         }
 
     }
@@ -63,7 +76,6 @@
             font-size: 1rem;
             display: inline-block;
             justify-content: space-around;
-            margin-left: 30px;
             font-weight: 400;
             padding-bottom: 25px;
             font-weight: 700;
@@ -77,6 +89,9 @@ li {
     list-style: none;
     width: 50%;
    text-align: center;
+@include breakpoints.medium {
+    text-align: left;
+}
 }
 
 @include breakpoints.medium {
@@ -84,16 +99,17 @@ li {
         flex-direction: row;
         width: 100vw;
         align-items: center;
-    }
+        }
 
 .active {
-
     font-weight: 400;
     font-size: 1rem;
     line-height: 2rem;
     padding-bottom: 25px;
     color: $white;
     width: fit-content;
+    margin: 0;
+    border-bottom: 0.2rem solid $white;
 
 }
 
@@ -108,7 +124,9 @@ li {
         font-weight: 400;
         color: $white;
         @include breakpoints.medium {
-
+border-bottom: none;
+    font-weight: 400;
+    color: $white;
         }
 }
 
