--- a/styles/shows.css
+++ b/styles/shows.css
@@ -63,11 +63,11 @@
 .main__hero--header {
   top: 0;
   left: 0;
-  margin: -4px;
+  margin: 0;
   position: absolute;
   text-align: left;
   padding-top: 7%;
-  height: 100%;
+  height: 60vw;
   right: 0;
   padding-left: 1.25rem;
   color: #ffffff;
@@ -103,6 +103,7 @@
   bottom: 20%;
   text-align: center;
   padding: 20px;
+  top: 12.5rem;
 }
 @media only screen and (min-width: 768px) {
   .main__hero--player {
