--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -37,11 +37,11 @@
         &--header {
             top: 0;
             left: 0;
-            margin: -4px;
+            margin: 0;
             position: absolute;
             text-align: left;
             padding-top: 7%;
-            height: 100%;
+            height: 60vw;
             right: 0;
             padding-left: 1.25rem;
             color: $white;
@@ -78,6 +78,8 @@
             bottom: 20%;
             text-align: center;
             padding: 20px;
+            top:12.5rem;
+
 
             @include breakpoints.medium {
                 height: 7rem;
