--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -31,7 +31,6 @@
 
     &__hero {
         @include breakpoints.large {
-            display: flex;
         }
 
         &--header {
@@ -40,8 +39,8 @@
             margin: 0;
             position: absolute;
             text-align: left;
-            padding-top: 7%;
-            height: 60vw;
+            padding-top: 5%;
+            height: 70vw;
             right: 0;
             padding-left: 1.25rem;
             color: $white;
@@ -57,67 +56,28 @@
                 padding-left: 4rem;
                 font-size: 2rem;
                 line-height: 4.25rem;
+                height: 50vw;
             }
 
             @include breakpoints.large {
-                padding-top: 15%;
                 font-weight: 400;
                 padding-left: 4rem;
                 font-size: 2rem;
-                line-height: 2rem;
 
 
             }
         }
-
-        &--player {
-            z-index: 99;
-            position: absolute;
-            width: 100%;
-            height: 7rem;
-            bottom: 20%;
-            text-align: center;
-            padding: 20px;
-            top:12.5rem;
-
-
-            @include breakpoints.medium {
-                height: 7rem;
-                text-align: center;
-                padding: 20px;
-                z-index: 99;
-                width: 30rem;
-                position: absolute;
-                top: 33rem;
-                left: 4rem;
-                margin: 0;
-
-            }
-
-            @include breakpoints.large {
-                height: 7rem;
-                text-align: center;
-                padding: 20px;
-                z-index: 99;
-                width: 30rem;
-                position: absolute;
-                top: 33rem;
-                left: 4rem;
-                margin: 0;
-
-            }
-
-
-        }
+  &--player{
+    display: inline;
+  }
 
         &--content {
             font-size: 1.5rem;
             position: absolute;
-            top: 0;
+            top: .625rem;
             margin: 0;
-            position: absolute;
             text-align: left;
-            padding-top: 20%;
+            padding-top: 15%;
             padding-left: 2rem;
             color: $white;
             font-weight: 600;
@@ -125,18 +85,16 @@
             @include breakpoints.medium {
                 font-weight: 700;
                 padding-left: 4rem;
-                font-size: 5rem;
-                line-height: 5rem;
+                font-size: 3rem;
+                width: 60%;
 
             }
 
             @include breakpoints.large {
                 font-weight: 700;
                 padding-left: 4rem;
-                font-size: 5rem;
-                line-height: 5rem;
-                display: inline-block;
-
+                font-size: 4rem;
+                width: 60%;
             }
         }
 
@@ -148,6 +106,10 @@
         }
     }
 }
+
+
+
+
 
 
 .title__show {
@@ -168,6 +130,39 @@
         padding-bottom: 2.25rem;
     }
 }
+
+
+
+
+ iframe {
+     z-index: 99;
+     position: relative;
+     top: -9.5rem;
+     left:2rem;
+
+     @include breakpoints.medium {
+        z-index: 99;
+            position: relative;
+            top: -7.5rem;
+            left: 4rem;
+
+     }
+
+     @include breakpoints.large {
+            z-index: 99;
+                position: relative;
+                top: -30rem;
+                left: 55rem;
+                width: 30%;
+
+     }
+
+
+ }
+
+
+
+
 
 
 
