--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -1,10 +1,15 @@
 /************* primary colors ********************/
 $color-primary-dark: #323232;
-$silver: #AFAFAF;
+$color-primary-light: #AFAFAF;
 $white: #ffffff;
 
 /*************secondary colors *****************/
 
-$dark-black: #000000;
+$color-secondary-dark: #000000;
 $mercury: #E1E1E1;
 $alabaster: #FAFAFA;
+
+
+$padding-mobile-before: 1.5rem;
+$padding-mobile-after: 1rem;
+$padding-mobile-between: 1rem;
