--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -5,9 +5,6 @@
 
 
 
-
-
-
 .main {
     flex-direction: column;
     justify-content: center;
@@ -15,7 +12,7 @@
     display: flex;
     margin: 0 auto;
     position: relative;
-    color: $dark-black;
+    color: $color-secondary-dark;
 
     &__show {
         font-weight: 600;
@@ -34,7 +31,6 @@
 
     &__hero {
         @include breakpoints.large {
-            display: flex;
         }
 
         &--header {
@@ -43,8 +39,8 @@
             margin: 0;
             position: absolute;
             text-align: left;
-            padding-top: 7%;
-            height: 100%;
+            padding-top: 5%;
+            height: 70vw;
             right: 0;
             padding-left: 1.25rem;
             color: $white;
@@ -60,84 +56,45 @@
                 padding-left: 4rem;
                 font-size: 2rem;
                 line-height: 4.25rem;
+                height: 50vw;
             }
 
             @include breakpoints.large {
-                padding-top: 15%;
                 font-weight: 400;
                 padding-left: 4rem;
                 font-size: 2rem;
-                line-height: 2rem;
 
 
             }
         }
-
-        &--player {
-            z-index: 99;
-            position: absolute;
-            width: 100%;
-            height: 7rem;
-            bottom: 20%;
-            text-align: center;
-            padding: 20px;
-
-            @include breakpoints.medium {
-                    height: 7rem;
-                    text-align: center;
-                    padding: 20px;
-                    z-index: 99;
-                    width: 30rem;
-                    position: absolute;
-                    top: 33rem;
-                    left: 4rem;
-                    margin: 0;
-            
-                }
-
-            @include breakpoints.large {
-                height: 7rem;
-                text-align: center;
-                padding: 20px;
-                z-index: 99;
-                width: 30rem;
-                position: absolute;
-                top: 33rem;
-                left: 4rem;
-                margin: 0;
-
-            }
-
-
-        }
+  &--player{
+    display: inline;
+  }
 
         &--content {
             font-size: 1.5rem;
             position: absolute;
-            top: 0;
+            top: .625rem;
             margin: 0;
-            position: absolute;
             text-align: left;
-            padding-top: 20%;
+            padding-top: 15%;
             padding-left: 2rem;
             color: $white;
             font-weight: 600;
 
             @include breakpoints.medium {
-                    font-weight: 700;
-                    padding-left: 4rem;
-                    font-size: 5rem;
-                    line-height: 5rem;
-            
-                }
+                font-weight: 700;
+                padding-left: 4rem;
+                font-size: 3rem;
+                width: 60%;
+
+            }
 
             @include breakpoints.large {
                 font-weight: 700;
                 padding-left: 4rem;
-                font-size: 5rem;
-                line-height: 5rem;
-                display: inline-block;
-
+                font-size: 4rem;
+                width: 60%;
             }
         }
 
@@ -150,6 +107,66 @@
     }
 }
 
+
+
+
+
+
+.title__show {
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    text-align: left;
+    width: 95%;
+    margin-left: 2rem;
+    padding-top: $padding-mobile-before;
+
+
+    @include breakpoints.medium {
+        font-size: 3.75rem;
+        line-height: 4.25rem;
+        margin-left: 2rem;
+        padding-top: $padding-mobile-before*2;
+        padding-bottom: 2.25rem;
+    }
+}
+
+
+
+
+ iframe {
+     z-index: 99;
+     position: relative;
+     top: -9.5rem;
+     left:2rem;
+
+     @include breakpoints.medium {
+        z-index: 99;
+            position: relative;
+            top: -7.5rem;
+            left: 4rem;
+
+     }
+
+     @include breakpoints.large {
+            z-index: 99;
+                position: relative;
+                top: -30rem;
+                left: 55rem;
+                width: 30%;
+
+     }
+
+
+ }
+
+
+
+
+
+
+
+/**************** Shows section************************/
 .section {
     display: flex;
     justify-content: center;
@@ -162,48 +179,54 @@
 
 
     @include breakpoints.medium {
-
+        margin-left: 2rem;
         display: inline;
         justify-content: center;
         font-size: 1.5rem;
         line-height: 2rem;
     }
 
-  
-
     &__header {
-        border-bottom: 1px solid $mercury;
-        margin: 1rem;
+
+    border-bottom: 1px solid $mercury;
         padding-bottom: 1rem;
         width: 100%;
         font-size: 1rem;
         padding-left: 1rem;
         color: $color-primary-dark;
-        display: flex;
-        width: 95%;
 
         @include breakpoints.medium {
             display: flex;
-            width: 100%;
-            flex-direction: row;
-            align-self: flex-start;
-     
+                width: 100%;
+                flex-direction: row;
+                align-self: flex-start;
+                font-size: 1.5rem;
+                line-height: 2rem;
+                align-items: center;
+
         }
     }
 
     &__header--item {
         font-size: 1rem;
         text-transform: uppercase;
-        color: $silver;
+        color: $color-primary-light;
         font-weight: 600;
-        width: 22%;
+        width: 21%;
         font-size: 1.5rem;
         line-height: 2rem;
-        margin-left: 2rem;
-
-
+        text-align: left;
+    @include breakpoints.medium {
+font-size: 1rem;
+    text-transform: uppercase;
+    color: $color-primary-light;
+    font-weight: 600;
+    width: 23%;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    text-align: left;
     }
-
+    }
 }
 
 .shows {
@@ -213,15 +236,17 @@
     font-size: 1rem;
     padding-left: 1rem;
     color: $color-primary-dark;
+    padding: 1rem;
 
 
     &:hover {
-            background: $alabaster;
-        }
-    &:active{
+        background: $alabaster;
+    }
+
+    &:active {
         background: $mercury;
     }
-   
+
 
     @include breakpoints.medium {
         display: flex;
@@ -230,13 +255,12 @@
         align-self: flex-start;
         font-size: 1.5rem;
         line-height: 2rem;
-        justify-content: space-around;
-         align-items: center;
-    }
+        align-items: center;
+        }
 
     &__button {
         height: 40px;
-        width: 20rem;
+        width: 100%;
         border-radius: .3125rem;
         background: $color-primary-dark;
         color: $white;
@@ -247,11 +271,12 @@
         @include breakpoints.medium {
             width: 15rem;
             margin: 1rem 2rem 1rem 2rem;
+            width: 20rem;
         }
     }
 
     &__button:hover {
-        background: $dark-black;
+        background: $color-secondary-dark;
     }
 
     &__dateHeader,
@@ -260,13 +285,22 @@
         font-size: .875rem;
         line-height: 1.375rem;
         text-transform: uppercase;
-        color: $silver;
+        color: $color-primary-light;
         font-weight: 600;
+       
     }
+@include breakpoints.medium {
 
-    &__date {
-        font-weight: 600;
+
+    &__venue, &__location {
+        font-weight: 400;
+        text-align: left;
+        width: 23%;
     }
+&__date {
+    font-weight: 600;
+    text-align: left;
+    width: 23%;
 }
-
-
+}
+}
