--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -21,17 +21,19 @@
     font-weight: 400;
     font-style: normal;
 }
-/*
+
+
+
 @font-face {
     font-family: "Avenir";
-    src: url("../../assets/fonts/Alternative\ files/AvenirNextLTPro-Bold") format("truetype");
+    src: url("../../assets/fonts/Alternative/files/AvenirNextLTPro-Bold") format("truetype");
     font-weight: 700;
     font-style: normal;
 }
 
 @font-face {
     font-family: "Avenir";
-    src: url("../../assets/fonts/Alternative\ files/AvenirNextLTPro-Demi") format("truetype");
+    src: url("../../assets/fonts/Alternative/files/AvenirNextLTPro-Demi") format("truetype");
     font-weight: 600;
     font-style: normal;
 }
@@ -43,4 +45,3 @@
     font-weight: 400;
     font-style: normal;
 }
-*/
